[cleanup] trial from X2Go

--- a/environment.yml
+++ b/environment.yml
@@ -1,164 +1,167 @@
-name: onpdb_dev_env
+name: lotus_env
 channels:
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
-  - r-askpass
-  - r-formula
-  - r-rstudioapi
-  - r-reshape2
-  - r-qdaptools
-  - r-rotl
-  - r-pillar
-  - r-wikipedir
-  - r-pacman
-  - r-solrium
-  - r-natserv
-  - r-rcpp
-  - r-tibble
-  - r-callr
-  - r-crayon
-  - r-selectr
-  - r-lifecycle
-  - r-rredlist
-  - r-viridis
-  - r-highr
-  - r-survival
-  - r-taxize
-  - r-markdown
-  - r-wikidatar
-  - r-xml2
-  - lxml
-  - r-checkmate
-  - r-pbmcapply
-  - r-rncl
-  - r-munsell
-  - r-plyr
-  - r-magrittr
-  - r-gtable
-  - r-htmltools
-  - r-sys
-  - r-reshape
-  - r-pkgconfig
-  - r-stringr
-  - r-hms
-  - r-dplyr
-  - r-cli
-  - cirpy
-  - r-digest
-  - r-ellipsis
-  - r-data.table
-  - r-nnet
-  - r-xfun
-  - r-testthat
-  - r-ggplot2
-  - r-r6
-  - r-readr
-  - r-vctrs
-  - requests-cache
-  - r-openssl
-  - r-rpart
-  - r-cellranger
-  - r-rematch
-  - r-ps
-  - r-knitr
-  - r-triebeard
-  - r-latticeextra
-  - r-farver
-  - r-rlang
-  - r-yaml
-  - r-foreign
-  - r-zeallot
-  - r-viridislite
-  - r-httr
-  - r-pkgbuild
-  - r-desc
-  - r-quadprog
-  - r-phangorn
-  - r-png
-  - r-isoband
-  - r-rentrez
-  - r-crul
-  - r-ritis
-  - r-curl
-  - r-fansi
-  - r-utf8
-  - r-prettyunits
-  - r-clipr
-  - r-evaluate
-  - r-httpcode
-  - r-codetools
-  - r-tidyr
-  - r-rjava
+  - python=3.*
   - ipykernel
-  - r-gridextra
-  - r-rvest
-  - r-iterators
-  - r-igraph
-  - r-jpeg
-  - r-chorddiag
-  - r-htmltable
-  - r-plogr
-  - molvs
-  - r-chron
-  - bioconductor-chemminer
-  - r-rcolorbrewer
-  - r-wikitaxa
-  - r-backports
-  - r-tidyverse
-  - r-base
-  - requests
-  - r-matrix
-  - r-praise
-  - r-splitstackshape
-  - r-xml
-  - r-mime
-  - r-stringi
-  - r-acepack
-  - r-mass
-  - r-rprojroot
-  - r-foreach
-  - r-fastmatch
-  - r-purrr
-  - r-bitops
-  - r-upsetr
-  - r-worrms
-  - r-pkgload
-  - r-bh
-  - r-htmlwidgets
-  - r-base64enc
-  - r-readxl
-  - r-bold
-  - r-colorspace
-  - r-lattice
-  - urllib3
-  - r-cluster
-  - r-processx
-  - r-webchem
-  - r-ape
-  - r-tidyselect
-  - r-collapsibletree
-  - python=3
-  - r-nlme
-  - r-withr
-  - r-zoo
   - pandas
+  - cirpy
+  - requests
+  - r-pacman
+  - r-ggalluvial
+  - r-ggfittext
+  - r-curl
+  - r-data.table
+  - r-zeallot
+  - r-plyr
+  - r-sys
+  - r-rredlist
+  - r-ape
+  - r-jsonlite
+  - r-rcurl
+  - r-webchem
+  - r-xml
+  - r-backports
+  - r-bold
+  - r-pkgconfig
+  - r-farver
+  - r-vctrs
+  - r-ps
+  - r-readxl
+  - r-readr
+  - r-solrium
+  - r-mgcv
+  - r-bh
+  - r-gridextra
+  - r-clipr
+  - r-splitstackshape
+  - r-wikipedir
+  - r-tibble
+  - r-igraph
+  - r-xfun
+  - r-glue
+  - r-prettyunits
+  - r-base64enc
+  - r-acepack
+  - r-plogr
+  - r-rlang
+  - r-assertthat
+  - r-iterators
+  - r-qdaptools
+  - r-highr
+  - r-stringi
+  - r-jpeg
+  - r-natserv
+  - r-scales
+  - r-magrittr
+  - r-processx
+  - r-nlme
+  - r-pillar
+  - r-fastmatch
+  - r-pbmcapply
+  - r-htmlwidgets
+  - r-cellranger
+  - r-hmisc
+  - r-formula
+  - r-r6
+  - r-stringr
+  - r-codetools
+  - r-survival
+  - r-xml2
+  - r-rprojroot
+  - r-lifecycle
+  - r-urltools
+  - r-wikitaxa
+  - r-openssl
+  - r-viridislite
+  - r-crul
+  - r-rvest
+  - r-desc
+  - r-rcpp
+  - r-worrms
+  - r-upsetr
+  - r-reshape
+  - r-rotl
+  - r-utf8
+  - r-hms
+  - r-httpcode
+  - r-isoband
+  - r-rcolorbrewer
+  - r-selectr
+  - r-pkgload
+  - r-progress
+  - r-rncl
+  - r-tidyselect
+  - r-yaml
+  - r-ellipsis
+  - r-rematch
+  - r-bitops
+  - r-testthat
+  - r-chron
+  - r-cli
+  - r-callr
+  - r-wikidatar
+  - r-rjava
+  - r-checkmate
+  - r-zoo
+  - r-markdown
+  - r-quadprog
+  - r-withr
+  - r-triebeard
+  - r-evaluate
+  - r-httr
+  - r-crayon
+  - r-foreach
+  - r-labeling
+  - r-fansi
+  - r-rstudioapi
+  - r-colorspace
+  - r-praise
+  - r-htmltools
+  - r-purrr
+  - r-knitr
+  - r-taxize
+  - r-mime
+  - r-lattice
+  - r-latticeextra
+  - r-munsell
+  - r-base
+  - r-matrix
+  - r-mass
+  - r-phangorn
+  - r-cluster
+  - r-viridis
+  - r-dplyr
+  - r-gtable
+  - r-reshape2
+  - r-rentrez
+  - r-ggplot2
+  - r-htmltable
+  - r-pkgbuild
+  - r-png
+  - r-rpart
+  - r-digest
+  - r-nnet
+  - r-foreign
+  - r-ritis
+  - r-askpass
+  - r-tidyr
+  - requests-cache
+  - rdkit
+  - molvs
+  - r-plotly
+  - bioconductor-chemminer
+  - r-chorddiag
+  - r-collapsibletree
   - r-eulerr
   - r-ggraph
-  - r-plotly
-  - r-rcurl
-  - r-urltools
-  - r-assertthat
   - r-reticulate
-  - r-scales
-  - beautifulsoup4
-  - r-hmisc
-  - r-labeling
-  - rdkit
-  - r-mgcv
-  - r-jsonlite
-  - r-glue
-  - r-progress
+  - r-tidyverse
+  - r-gdata
   - r-stringdist
+  - beautifulsoup4
+  - lxml
+  - urllib3
   - dvc
-prefix: /home/EPGL.UNIGE.LOCAL/allardp/anaconda3/envs/onpdb_dev_env
