[cleanup] cleaning environment, readme and some leftovers (npass parsing update)

--- a/environment.yml
+++ b/environment.yml
@@ -4,164 +4,49 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.*
-  - ipykernel
-  - pandas
+  - beautifulsoup4
   - cirpy
-  - requests
-  - r-pacman
-  - r-ggalluvial
-  - r-ggfittext
-  - r-curl
-  - r-data.table
-  - r-zeallot
-  - r-plyr
-  - r-sys
-  - r-rredlist
-  - r-ape
-  - r-jsonlite
-  - r-rcurl
-  - r-webchem
-  - r-xml
-  - r-backports
-  - r-bold
-  - r-pkgconfig
-  - r-farver
-  - r-vctrs
-  - r-ps
-  - r-readxl
-  - r-readr
-  - r-solrium
-  - r-mgcv
-  - r-bh
-  - r-gridextra
-  - r-clipr
-  - r-splitstackshape
-  - r-wikipedir
-  - r-tibble
-  - r-igraph
-  - r-xfun
-  - r-glue
-  - r-prettyunits
-  - r-base64enc
-  - r-acepack
-  - r-plogr
-  - r-rlang
-  - r-assertthat
-  - r-iterators
-  - r-qdaptools
-  - r-highr
-  - r-stringi
-  - r-jpeg
-  - r-natserv
-  - r-scales
-  - r-magrittr
-  - r-processx
-  - r-nlme
-  - r-pillar
-  - r-fastmatch
-  - r-pbmcapply
-  - r-htmlwidgets
-  - r-cellranger
-  - r-hmisc
-  - r-formula
-  - r-r6
-  - r-stringr
-  - r-codetools
-  - r-survival
-  - r-xml2
-  - r-rprojroot
-  - r-lifecycle
-  - r-urltools
-  - r-wikitaxa
-  - r-openssl
-  - r-viridislite
-  - r-crul
-  - r-rvest
-  - r-desc
-  - r-rcpp
-  - r-worrms
-  - r-upsetr
-  - r-reshape
-  - r-rotl
-  - r-utf8
-  - r-hms
-  - r-httpcode
-  - r-isoband
-  - r-rcolorbrewer
-  - r-selectr
-  - r-pkgload
-  - r-progress
-  - r-rncl
-  - r-tidyselect
-  - r-yaml
-  - r-ellipsis
-  - r-rematch
-  - r-bitops
-  - r-testthat
-  - r-chron
-  - r-cli
-  - r-callr
-  - r-wikidatar
-  - r-rjava
-  - r-checkmate
-  - r-zoo
-  - r-markdown
-  - r-quadprog
-  - r-withr
-  - r-triebeard
-  - r-evaluate
-  - r-httr
-  - r-crayon
-  - r-foreach
-  - r-labeling
-  - r-fansi
-  - r-rstudioapi
-  - r-colorspace
-  - r-praise
-  - r-htmltools
-  - r-purrr
-  - r-knitr
-  - r-taxize
-  - r-mime
-  - r-lattice
-  - r-latticeextra
-  - r-munsell
-  - r-base
-  - r-matrix
-  - r-mass
-  - r-phangorn
-  - r-cluster
-  - r-viridis
-  - r-dplyr
-  - r-gtable
-  - r-reshape2
-  - r-rentrez
-  - r-ggplot2
-  - r-htmltable
-  - r-pkgbuild
-  - r-png
-  - r-rpart
-  - r-digest
-  - r-nnet
-  - r-foreign
-  - r-ritis
-  - r-askpass
-  - r-tidyr
-  - requests-cache
-  - rdkit
+  - dvc
+  - ipykernel
+  - lxml
   - molvs
-  - r-plotly
+  - pandas
+  - python=3.*
+  - rdkit
+  - requests
+  - requests-cache
+  - urllib3
   - bioconductor-chemminer
+  - r-base
   - r-chorddiag
   - r-collapsibletree
-  - r-eulerr
+  - r-data.table
+  - r-dplyr
+  - r-forcats
+  - r-formula
+  - r-ggalluvial
+  - r-ggfittext
+  - r-ggplot2
   - r-ggraph
-  - r-reticulate
-  - r-tidyverse
-  - r-gdata
+  - r-hmisc
+  - r-jsonlite
+  - r-lattice
+  - r-pbmcapply
+  - r-plotly
+  - r-purrr
+  - r-readr
+  - r-readxl
+  - r-rentrez
+  - r-rvest
+  - r-splitstackshape
   - r-stringdist
-  - beautifulsoup4
-  - lxml
-  - urllib3
-  - dvc
+  - r-stringi
+  - r-stringr
+  - r-survival
+  - r-tibble
+  - r-tidyr
+  - r-tidyverse
+  - r-upsetr
+  - r-webchem
+  - r-xml
+  - r-xml2
