--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,10 @@ build-curating:
   stage: build-curating
   script:
     - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v /srv/onpdb-data/interim:/srv/onpdb/data/validation -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make curating"
-  # rules:
-  #   - changes:
-  #     - data/*.dvc
+  rules:
+    - changes:
+     - data/*.dvc
+     - src/2_curating/*
 
 build-analysing:
   stage: build-analysing
@@ -69,4 +70,3 @@ build-visualizing:
     - changes:
       - data/*.dvc
       - src/4_visualizing/*
-
