--- a/environment.yml
+++ b/environment.yml
@@ -23,33 +23,23 @@ dependencies:
   - r-collapsibletree
   - r-data.table
   - r-DBI
-  - r-dplyr
-  - r-forcats
-  - r-formula
   - r-gdata
   - r-ggalluvial
   - r-ggfittext
-  - r-ggplot2
   - r-ggraph
   - r-hmisc
   - r-jsonlite
-  - r-lattice
   - r-pbmcapply
   - r-plotly
-  - r-purrr
-  - r-readr
   - r-readxl
   - r-rentrez
   - r-rotl
+  - r-RPostgreSQL
+  - r-RSQLite
   - r-rvest
   - r-splitstackshape
-  - r-RSQLite
   - r-stringdist
   - r-stringi
-  - r-stringr
-  - r-survival
-  - r-tibble
-  - r-tidyr
   - r-tidyverse
   - r-upsetr
   - r-vroom<=1.3.2 # since for the moment 1.4.0 is not able to read quoted gzip properly 
