--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ src/local_pma
 /src/.RData
 /src/2_curating/2_editing/organism/subscripts/2_translating_organism_kotlin/build/
 /src/2_curating/2_editing/organism/subscripts/2_translating_organism_kotlin/.gradle/
+/src/Rplots.pdf
