--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,13 +112,13 @@ build-analysing:
         - Makefile
         - .gitlab-ci.yml
 
-# build-visualizing:
-#   stage: build-visualizing
-#   script:
-#     - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v /srv/onpdb-data/validation:/srv/onpdb/data/validation -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make MODE=min visualizing"
-#   rules:
-#     - changes:
-#         - data/*.dvc
-#         - src/4_visualizing/*
-#         - Makefile
-#         - .gitlab-ci.yml
+build-visualizing:
+  stage: build-visualizing
+  script:
+    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v /srv/onpdb-data/validation:/srv/onpdb/data/validation -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && make MODE=min visualizing"
+  rules:
+    - changes:
+        - data/*.dvc
+        - src/4_visualizing/*
+        - Makefile
+        - .gitlab-ci.yml
