tmap with map4 encoding on 2D smiles

--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - pip
   - pip:
     - faerun
+    - git+https://github.com/reymond-group/map4
   - r-base
   - r-chorddiag
   - r-codetools
