--- a/environment.yml
+++ b/environment.yml
@@ -53,6 +53,7 @@ dependencies:
   - r-stringdist
   - r-stringi
   - r-testthat
+  - r-tidytree ## needed by ggtree
   - r-tidyverse
   - r-upsetr
   - r-vroom<=1.3.2 # since for the moment 1.4.0 is not able to read quoted gzip properly 
