--- a/environment.yml
+++ b/environment.yml
@@ -30,6 +30,7 @@ dependencies:
   - r-aplot ## needed by ggtree
   - r-base
   - r-chorddiag
+  - r-clisymbols ## needed by classyfirer
   - r-codetools
   - r-data.table
   - r-dplyr<=1.0.5 # since for the moment ggplot2 has issues with new one
