--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ channels:
 dependencies:
   - beautifulsoup4
   - cirpy
-  - dvc>=2.1.0
+  - dvc>=2.3.0
   - dvc-s3 ## needed by the new versions of dvc
   - ipykernel
   - lxml
@@ -49,7 +49,7 @@ dependencies:
   - r-rotl
   - r-RPostgreSQL
   - r-RSQLite
-  - r-R.utils ## needed for new version of data.tabel to read .gz
+  - r-R.utils ## needed for new version of data.table to read .gz
   - r-rvcheck ## needed by ggtree
   - r-rvest
   - r-splitstackshape
@@ -59,7 +59,7 @@ dependencies:
   - r-tidytree ## needed by ggtree
   - r-tidyverse
   - r-upsetr
-  - r-vroom<=1.3.2 # since for the moment 1.4.0 is not able to read quoted gzip properly 
+  - r-vroom>=1.5.0 # since 1.4.0 was not able to read quoted gzip properly 
   - r-webchem
   - r-XML
   - r-xml2
