--- a/environment.yml
+++ b/environment.yml
@@ -33,7 +33,7 @@ dependencies:
   - r-clisymbols ## needed by classyfirer
   - r-codetools
   - r-data.table
-  - r-dplyr<=1.0.5 # since for the moment ggplot2 has issues with new one
+  - r-dplyr
   - r-DBI
   - r-gdata
   - r-ggalluvial
