--- a/environment_strict.yml
+++ b/environment_strict.yml
@@ -26,9 +26,9 @@ dependencies:
   - boost-cpp=1.74.0=hff03dee_4
   - boto3=1.17.106=pyhd8ed1ab_0
   - botocore=1.20.106=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py37hf967b71_1001
-  - bwidget=1.9.14=0
-  - bzip2=1.0.8=hc929b4f_4
+  - brotlipy=0.7.0=py37h271585c_1001
+  - bwidget=1.9.14=h694c41f_0
+  - bzip2=1.0.8=h0d85af4_4
   - c-ares=1.17.2=h0d85af4_0
   - ca-certificates=2021.7.5=hecd8cb5_1
   - cached-property=1.5.2=hd8ed1ab_1
@@ -41,11 +41,12 @@ dependencies:
   - chardet=4.0.0=py37hf985489_1
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
   - cirpy=1.0.2=py_0
-  - clang=12.0.1=h694c41f_0
-  - clang-12=12.0.1=default_he082bbe_0
-  - clang_osx-64=12.0.1=hb91bd55_0
-  - clangxx=12.0.1=default_he082bbe_0
-  - clangxx_osx-64=12.0.1=h7e1b574_0
+  - clang=12.0.1=h694c41f_3
+  - clang-12=12.0.1=default_he082bbe_3
+  - clang_osx-64=12.0.1=hb91bd55_1
+  - clangxx=12.0.1=default_he082bbe_3
+  - clangxx_osx-64=12.0.1=h7e1b574_1
+  - cmcrameri=1.2=pyhd8ed1ab_0
   - colorama=0.4.4=pyh9f0ad1d_0
   - commonmark=0.9.1=py_0
   - compiler-rt=12.0.1=he01351e_0
@@ -55,7 +56,7 @@ dependencies:
   - curl=7.78.0=hb861fe1_0
   - cycler=0.10.0=py_2
   - debugpy=1.4.1=py37hd8d24ac_0
-  - decorator=4.4.2=py_0
+  - decorator=5.0.9=pyhd8ed1ab_0
   - dictdiffer=0.9.0=pyhd8ed1ab_0
   - diskcache=5.2.1=pyh44b312d_0
   - distro=1.5.0=pyh9f0ad1d_0
@@ -63,7 +64,7 @@ dependencies:
   - dulwich=0.20.25=py37h271585c_0
   - dvc=2.6.4=py37hf985489_2
   - dvc-s3=2.6.4=py37hf985489_2
-  - entrypoints=0.3=py37hc8dfbb8_1002
+  - entrypoints=0.3=pyhd8ed1ab_1003
   - expat=2.4.1=he49afe7_0
   - flatten-dict=0.4.2=pyhd8ed1ab_1
   - flufl.lock=3.2=py_0
@@ -85,7 +86,7 @@ dependencies:
   - gfortran_impl_osx-64=9.3.0=h9cc0e5e_23
   - gfortran_osx-64=9.3.0=h18f7dce_14
   - giflib=5.2.1=hbcb3906_2
-  - gitdb=4.0.7=pyhd8ed1ab_0
+  - gitdb=4.0.7=pyhd3eb1b0_0
   - gitpython=3.1.18=pyhd8ed1ab_0
   - gmp=6.2.1=h2e338ed_0
   - grandalf=0.6=py_0
@@ -95,12 +96,12 @@ dependencies:
   - gsl=2.7=h93259b0_0
   - gtk2=2.24.33=h675d97a_1
   - gts=0.7.6=hccb3bdf_2
-  - harfbuzz=2.9.0=h159f659_0
+  - harfbuzz=2.9.1=h159f659_0
   - icu=68.1=h74dc148_0
   - idna=3.2=pyhd3eb1b0_0
   - importlib-metadata=4.8.1=py37hf985489_0
   - importlib_metadata=4.8.1=hd8ed1ab_0
-  - ipykernel=6.3.0=py37h4c52d7d_0
+  - ipykernel=6.3.1=py37h4c52d7d_0
   - ipython=7.27.0=py37h4c52d7d_0
   - ipython_genutils=0.2.0=py_1
   - isl=0.22.1=hb1e8313_2
@@ -109,7 +110,7 @@ dependencies:
   - jedi=0.18.0=py37hf985489_2
   - jmespath=0.10.0=pyh9f0ad1d_0
   - jpeg=9d=hbcb3906_0
-  - jupyter_client=7.0.1=pyhd8ed1ab_0
+  - jupyter_client=7.0.2=pyhd8ed1ab_0
   - jupyter_core=4.7.1=py37hf985489_0
   - kiwisolver=1.3.2=py37h737db71_0
   - krb5=1.19.2=hcfbf3a7_0
@@ -119,7 +120,7 @@ dependencies:
   - lerc=2.2.1=h046ec9c_0
   - libblas=3.9.0=11_osx64_openblas
   - libcblas=3.9.0=11_osx64_openblas
-  - libclang-cpp12=12.0.1=default_he082bbe_0
+  - libclang-cpp12=12.0.1=default_he082bbe_3
   - libcurl=7.78.0=hf45b732_0
   - libcxx=12.0.1=habf9029_0
   - libdeflate=1.7=h35c211d_5
@@ -137,7 +138,7 @@ dependencies:
   - libllvm12=12.0.1=hd011deb_2
   - libnghttp2=1.43.0=h07e645a_0
   - libopenblas=0.3.17=openmp_h3351f45_1
-  - libpng=1.6.37=hb0a8c7a_2
+  - libpng=1.6.37=h7cec526_2
   - libpq=13.3=hea3049e_0
   - librsvg=2.50.7=hd2a7919_0
   - libsodium=1.0.18=hbcb3906_1
@@ -161,17 +162,17 @@ dependencies:
   - molvs=0.1.1=py_0
   - mpc=1.1.0=ha57cd0f_1009
   - mpfr=4.1.0=h0f52abe_1
-  - multidict=5.1.0=py37hf967b71_1
+  - multidict=5.1.0=py37h271585c_1
   - nanotime=0.5.2=py_0
   - ncurses=6.2=h2e338ed_4
   - nest-asyncio=1.5.1=pyhd8ed1ab_0
-  - networkx=2.6.2=pyhd8ed1ab_0
+  - networkx=2.6.2=pyhd3eb1b0_0
   - numpy=1.21.2=py37haefe36b_0
   - ogdf=201207=h470a237_1
   - olefile=0.46=pyh9f0ad1d_1
   - openjdk=11.0.9.1=hcf210ce_1
   - openjpeg=2.4.0=h6e7aa92_1
-  - openssl=1.1.1k=h0d85af4_1
+  - openssl=1.1.1l=h0d85af4_0
   - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.3.2=py37h5b83a90_0
   - pango=1.48.9=ha05cd14_0
@@ -180,21 +181,21 @@ dependencies:
   - pathspec=0.8.1=pyhd3deb0d_0
   - pcre=8.45=he49afe7_0
   - pcre2=10.37=ha16e1b2_0
-  - pexpect=4.8.0=py37hc8dfbb8_1
+  - pexpect=4.8.0=pyh9f0ad1d_2
   - phonenumbers=8.12.31=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py37hc8dfbb8_1002
-  - pillow=8.3.1=py37h76dc067_0
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.3.2=py37h76dc067_0
   - pip=21.2.4=pyhd8ed1ab_0
   - pixman=0.40.0=hbcb3906_0
   - ply=3.11=py_1
   - prompt-toolkit=3.0.20=pyha770c72_0
-  - psutil=5.8.0=py37hf967b71_1
+  - psutil=5.8.0=py37h271585c_1
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pyasn1=0.4.8=py_0
   - pycairo=1.20.1=py37hac2abfc_0
   - pycparser=2.20=pyh9f0ad1d_2
   - pydot=1.4.2=py37hf985489_0
-  - pygit2=1.6.1=py37h271585c_0
+  - pygit2=1.6.1=py37h271585c_1
   - pygments=2.10.0=pyhd8ed1ab_0
   - pygtrie=2.4.2=pyhd3deb0d_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
@@ -209,9 +210,8 @@ dependencies:
   - pytz=2021.1=pyhd8ed1ab_0
   - pyyaml=5.4.1=py37h271585c_1
   - pyzmq=22.2.1=py37h8f778e5_0
-  - r-acepack=1.4.1=r41h749f5a1_1006
   - r-ape=5.5=r41he5a6823_0
-  - r-aplot=0.0.6=r41hc72bb7e_0
+  - r-aplot=0.1.0=r41hc72bb7e_0
   - r-askpass=1.1=r41h28b5c78_2
   - r-assertthat=0.2.1=r41hc72bb7e_2
   - r-backports=1.2.1=r41h28b5c78_0
@@ -227,12 +227,10 @@ dependencies:
   - r-cachem=1.0.6=r41h28b5c78_0
   - r-callr=3.7.0=r41hc72bb7e_0
   - r-cellranger=1.1.0=r41hc72bb7e_1003
-  - r-checkmate=2.0.0=r41h28b5c78_1
   - r-chorddiag=0.1.3=r41ha770c72_1
   - r-cli=3.0.1=r41h9951f98_1
   - r-clipr=0.7.1=r41hc72bb7e_0
   - r-clisymbols=1.2.0=r41hc72bb7e_1003
-  - r-cluster=2.1.2=r41h749f5a1_0
   - r-codetools=0.2_18=r41hc72bb7e_0
   - r-colorspace=2.0_2=r41h28b5c78_0
   - r-cpp11=0.3.1=r41hc72bb7e_0
@@ -248,15 +246,13 @@ dependencies:
   - r-digest=0.6.27=r41h9951f98_0
   - r-downloader=0.4=r41hc72bb7e_1003
   - r-dplyr=1.0.7=r41h9951f98_0
-  - r-dt=0.18=r41hc72bb7e_0
+  - r-dt=0.19=r41hc72bb7e_0
   - r-ellipsis=0.3.2=r41h28b5c78_0
   - r-evaluate=0.14=r41hc72bb7e_2
   - r-fansi=0.5.0=r41h28b5c78_0
   - r-farver=2.1.0=r41h9951f98_0
   - r-fastmap=1.1.0=r41h9951f98_0
   - r-forcats=0.5.1=r41hc72bb7e_0
-  - r-foreign=0.8_81=r41h28b5c78_0
-  - r-formula=1.2_4=r41hc72bb7e_0
   - r-gdata=2.18.0=r41hc72bb7e_1003
   - r-generics=0.1.0=r41hc72bb7e_0
   - r-ggalluvial=0.12.3=r41hc72bb7e_0
@@ -264,18 +260,17 @@ dependencies:
   - r-ggforce=0.3.3=r41h9951f98_0
   - r-ggnewscale=0.4.5=r41hc72bb7e_0
   - r-ggplot2=3.3.5=r41hc72bb7e_0
+  - r-ggplotify=0.1.0=r41hc72bb7e_0
   - r-ggraph=2.0.5=r41h9951f98_0
   - r-ggrepel=0.9.1=r41h9951f98_0
   - r-glue=1.4.2=r41h28b5c78_0
   - r-graphlayouts=0.7.1=r41h9951f98_0
   - r-gridextra=2.3=r41hc72bb7e_1003
+  - r-gridgraphics=0.5_1=r41hc72bb7e_0
   - r-gtable=0.3.0=r41hc72bb7e_3
   - r-gtools=3.9.2=r41h28b5c78_0
   - r-hexbin=1.28.2=r41h749f5a1_0
-  - r-highr=0.9=r41hc72bb7e_0
-  - r-hmisc=4.5_0=r41h749f5a1_0
   - r-hms=1.1.0=r41hc72bb7e_0
-  - r-htmltable=2.2.1=r41hc72bb7e_0
   - r-htmltools=0.5.2=r41h9951f98_0
   - r-htmlwidgets=1.5.3=r41hc72bb7e_0
   - r-httpuv=1.6.2=r41h9951f98_0
@@ -283,17 +278,14 @@ dependencies:
   - r-igraph=1.2.6=r41hc81bdb1_1
   - r-influencer=0.1.0=r41h28b5c78_1004
   - r-isoband=0.2.5=r41h9951f98_0
-  - r-jpeg=0.1_8.1=r41h28b5c78_1
+  - r-jquerylib=0.1.4=r41hc72bb7e_0
   - r-jsonlite=1.7.2=r41h28b5c78_0
-  - r-knitr=1.33=r41hc72bb7e_0
   - r-labeling=0.4.2=r41hc72bb7e_0
   - r-later=1.2.0=r41h9951f98_0
   - r-lattice=0.20_44=r41h28b5c78_0
-  - r-latticeextra=0.6_29=r41hc72bb7e_1
   - r-lazyeval=0.2.2=r41h28b5c78_2
   - r-lifecycle=1.0.0=r41hc72bb7e_0
   - r-magrittr=2.0.1=r41h28b5c78_1
-  - r-markdown=1.1=r41h28b5c78_1
   - r-mass=7.3_54=r41h28b5c78_0
   - r-matrix=1.3_4=r41hc2c5f09_0
   - r-memoise=2.0.0=r41hc72bb7e_0
@@ -301,8 +293,7 @@ dependencies:
   - r-mime=0.11=r41h28b5c78_0
   - r-munsell=0.5.0=r41hc72bb7e_1003
   - r-nlme=3.1_152=r41h749f5a1_0
-  - r-nnet=7.3_16=r41h28b5c78_0
-  - r-openssl=1.4.4=r41hd95e000_0
+  - r-openssl=1.4.5=r41hd95e000_0
   - r-patchwork=1.1.1=r41hc72bb7e_0
   - r-pbmcapply=1.5.0=r41h28b5c78_1
   - r-pillar=1.6.2=r41hc72bb7e_0
@@ -329,7 +320,7 @@ dependencies:
   - r-rcpparmadillo=0.10.6.0.0=r41he5a6823_0
   - r-rcppeigen=0.3.3.9.1=r41he5a6823_0
   - r-rcurl=1.98_1.4=r41h28b5c78_0
-  - r-readr=1.4.0=r41h9951f98_0
+  - r-readr=2.0.1=r41h9951f98_0
   - r-readxl=1.3.1=r41h8a02945_4
   - r-rematch=1.0.1=r41hc72bb7e_1003
   - r-rematch2=2.1.2=r41hc72bb7e_1
@@ -339,7 +330,6 @@ dependencies:
   - r-rlang=0.4.11=r41h28b5c78_0
   - r-rncl=0.8.4=r41h9951f98_1
   - r-rotl=3.0.11=r41hc72bb7e_0
-  - r-rpart=4.1_15=r41h28b5c78_2
   - r-rpostgresql=0.7=r41h28b5c78_0
   - r-rprojroot=2.0.2=r41hc72bb7e_0
   - r-rsqlite=2.2.5=r41h9951f98_0
@@ -355,7 +345,6 @@ dependencies:
   - r-stringdist=0.9.7=r41ha76789d_0
   - r-stringi=1.7.4=r41hd783aa8_0
   - r-stringr=1.4.0=r41hc72bb7e_2
-  - r-survival=3.2_13=r41h28b5c78_0
   - r-sys=3.4=r41h28b5c78_0
   - r-testthat=3.0.4=r41h9951f98_0
   - r-tibble=3.1.4=r41h28b5c78_0
@@ -364,12 +353,14 @@ dependencies:
   - r-tidyselect=1.1.1=r41hbe3e9c8_0
   - r-tidytree=0.3.4=r41hc72bb7e_0
   - r-tweenr=1.0.2=r41h9951f98_0
+  - r-tzdb=0.1.2=r41h9951f98_0
   - r-upsetr=1.4.0=r41hc72bb7e_2
   - r-utf8=1.2.2=r41h28b5c78_0
   - r-vctrs=0.3.8=r41h28b5c78_1
   - r-viridis=0.6.1=r41hc72bb7e_1
   - r-viridislite=0.4.0=r41hc72bb7e_0
   - r-visnetwork=2.0.9=r41hc72bb7e_1
+  - r-vroom=1.5.4=r41h9951f98_0
   - r-waldo=0.3.0=r41hc72bb7e_0
   - r-webchem=1.1.1=r41hc72bb7e_0
   - r-withr=2.4.2=r41hc72bb7e_0
@@ -377,6 +368,7 @@ dependencies:
   - r-xml=3.99_0.7=r41h28b5c78_0
   - r-xml2=1.3.2=r41h9951f98_1
   - r-yaml=2.2.1=r41h28b5c78_1
+  - r-yulab.utils=0.0.2=r41hc72bb7e_0
   - rdkit=2021.03.5=py37h9710f2f_0
   - readline=8.1=h05e3726_0
   - reportlab=3.5.68=py37h08983f2_0
@@ -390,31 +382,31 @@ dependencies:
   - scipy=1.7.1=py37h4e3cf02_0
   - setuptools=57.4.0=py37hf985489_0
   - shortuuid=1.0.1=py37hf985489_4
-  - shtab=1.4.0=pyhd8ed1ab_0
+  - shtab=1.4.1=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - smmap=3.0.5=pyh44b312d_0
+  - smmap=4.0.0=pyhd8ed1ab_1
   - soupsieve=2.2.1=pyhd3eb1b0_0
   - sqlalchemy=1.4.23=py37h271585c_0
   - sqlite=3.36.0=h23a322b_0
   - tabulate=0.8.9=pyhd8ed1ab_0
-  - tapi=1100.0.11=h879752b_0
+  - tapi=1100.0.11=h9ce4665_0
   - text-unidecode=1.3=py_0
-  - tk=8.6.11=hd798d34_0
+  - tk=8.6.11=h5dbffcc_1
   - tktable=2.10=h49f0cf7_3
   - tmap=1.0.4=py37h04f5b5a_0
   - toml=0.10.2=pyhd8ed1ab_0
-  - tornado=6.1=py37hf967b71_1
+  - tornado=6.1=py37h271585c_1
   - tqdm=4.62.2=pyhd8ed1ab_0
-  - traitlets=5.0.5=py_0
+  - traitlets=5.1.0=pyhd8ed1ab_0
   - typing-extensions=3.10.0.0=hd8ed1ab_0
   - typing_extensions=3.10.0.0=pyha770c72_0
-  - unidecode=1.2.0=pyhd8ed1ab_0
+  - unidecode=1.3.0=pyhd8ed1ab_0
   - url-normalize=1.4.3=pyhd8ed1ab_0
   - urllib3=1.26.6=pyhd8ed1ab_0
   - voluptuous=0.12.1=pyhd3deb0d_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - wheel=0.37.0=pyhd8ed1ab_1
-  - wrapt=1.12.1=py37hf967b71_3
+  - wrapt=1.12.1=py37h271585c_3
   - xmltodict=0.12.0=py_0
   - xz=5.2.5=haf1e3a3_1
   - yaml=0.2.5=haf1e3a3_0
@@ -436,7 +428,7 @@ dependencies:
     - jinja2==3.0.1
     - map4==1.0
     - markupsafe==2.0.1
-    - more-itertools==8.8.0
+    - more-itertools==8.9.0
     - portend==2.7.1
     - tempora==4.1.1
     - ujson==4.1.0
